// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select: Component should render correctly 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "height": "30px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "cursor": "pointer",
            "display": "flex",
            "height": "30px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "display": "none",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "175px",
          "overflow": "hidden",
          "position": "absolute",
          "top": "46px",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "none",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;

exports[`Select: Component should render correctly with native 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <select
    onChange={[Function]}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "label": "Dolphin",
          "value": "dolphin",
        },
        Object {
          "label": "Dog",
          "value": "dog",
        },
        Object {
          "label": "Parrot",
          "value": "parrot",
        },
        Object {
          "label": "Cat",
          "value": "cat",
        },
        Object {
          "label": "Alligator",
          "value": "alligator",
        },
        Object {
          "label": "Spider",
          "value": "spider",
        },
      ]
    }
    placeholder=""
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <option
      key="0"
      value="dolphin"
    >
      Dolphin
    </option>
    <option
      key="1"
      value="dog"
    >
      Dog
    </option>
    <option
      key="2"
      value="parrot"
    >
      Parrot
    </option>
    <option
      key="3"
      value="cat"
    >
      Cat
    </option>
    <option
      key="4"
      value="alligator"
    >
      Alligator
    </option>
    <option
      key="5"
      value="spider"
    >
      Spider
    </option>
  </select>
</div>
`;

exports[`Select: Component should render correctly with placeholder 1`] = `
<div
  style={
    Object {
      "color": "#FFF",
      "display": "flex",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "display": "flex",
          "height": "30px",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "cursor": "pointer",
            "display": "flex",
            "height": "30px",
          }
        }
      >
        Select one
      </div>
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "display": "none",
          "flexDirection": "column",
          "left": "0",
          "maxHeight": "175px",
          "overflow": "hidden",
          "position": "absolute",
          "top": "46px",
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <div
        id="select-item-0"
        key="0"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "none",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Dolphin
      </div>
      <div
        id="select-item-1"
        key="1"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Dog
      </div>
      <div
        id="select-item-2"
        key="2"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Parrot
      </div>
      <div
        id="select-item-3"
        key="3"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Cat
      </div>
      <div
        id="select-item-4"
        key="4"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Alligator
      </div>
      <div
        id="select-item-5"
        key="5"
        onClick={[Function]}
        style={
          Object {
            "borderTop": "1px solid  #000",
            "cursor": "pointer",
            "display": "block",
            "padding": "7px",
          }
        }
      >
        Spider
      </div>
    </div>
  </div>
</div>
`;
